--- a/package.json
+++ b/package.json
@@ -70,11 +70,13 @@
   "scripts": {
     "build": "ts-node ./src/build.ts",
     "package": "vsce package",
-    "publish": "npm run build; vsce package; vsce publish"
+    "publish": "npm run build; vsce package; vsce publish",
+    "publish:openvsx": "npm run build; vsce package; ovsx publish"
   },
   "devDependencies": {
     "@types/node": "^16.6.0",
     "ayu": "^8.0.1",
+    "ovsx": "^0.8.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
     "vsce": "^1.96.1"
