--- a/package.json
+++ b/package.json
@@ -70,8 +70,9 @@
   "scripts": {
     "build": "ts-node ./src/build.ts",
     "package": "vsce package",
-    "publish": "npm run build; vsce package; vsce publish",
-    "publish:openvsx": "npm run build; vsce package; ovsx publish"
+    "publish": "vsce publish",
+    "publish:openvsx": "ovsx publish",
+    "release": "npm run build; npm run package; npm run publish; npm run publish:openvsx"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
