build(package): bump version to 1.1.1-dev
This updates the project version to 1.1.1-dev in the package metadata.

The increment prepares the repository for upcoming development work after the latest stable release.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "based-ayu",
   "displayName": "Based Ayu",
   "description": "Based on vscode-ayu version 1.1.0",
-  "version": "1.1.0",
+  "version": "1.1.1-dev",
   "publisher": "asyrjasalo",
   "license": "MIT",
   "repository": {
